tests/miz/pass/types/pass_type_elaboration_parenthesized_reserved_variable_membership_001.miz
reserve x for set;
theorem ParenthesizedReservedVariableMembershipPayloadBoundary: (x) in x;
