tests/miz/fail/types/fail_type_elaboration_formula_connective_quantifier_gap_001.miz
theorem FormulaConnectiveQuantifierPayloadBoundary: contradiction implies for x being set holds not contradiction;
